stop bullet point ladder view alignment

--- a/src/css/bustime.sass
+++ b/src/css/bustime.sass
@@ -1470,6 +1470,7 @@
     >li
       padding: 0 0 1rem 1.5rem
       position: relative
+      line-height: 1
       &::before
         content: ''
         display: inline-block
@@ -1492,7 +1493,7 @@
         position: absolute
         left: .25rem
         top: .25rem
-        transform: translateX(1px)
+        transform: translateX(0.75px)
         z-index: 1
       &:last-child
         &::after
